test/fail/generated/test_AvgPool3d_stride_pad_gpu_fixedkw_output/model.pb
pytorch0.3:§
Q
01"AveragePool*
kernel_shape@@@ *
pads@@@ *
strides@@@ torch-jit-exportZ
0





b
1





B